# mrrocpp

./: .gitignore
src/application/: CMakeLists.txt
src/application/hswitals/: CMakeLists.txt  ecp_g_hswitals_generatore.cc  ecp_g_hswitals_generatore.h  ecp_g_hswitals_generatore.h~  ecp_g_hswitals_rubik_rotate.cc  ecp_g_hswitals_rubik_rotate.h  ecp_mp_g_hswitals_generatore.cc  ecp_mp_g_hswitals_generatore.h  ecp_mp_g_hswitals_rubik_rotate.h  ecp_t_hswitals_generatore.cc  ecp_t_hswitals_generatore.h  mp_rubic_cube_hswitals.cc  mp_rubic_cube_hswitals.h  rubic.ini  rubic.ini~
src/application/hswitals/trj/: OLD_irp6ot_test.trj  irp6ot_cube_approach.trj  irp6ot_cube_approach.trj~  irp6ot_cube_departure.trj  irp6ot_test.trj
src/application/rcsc/: State.cc
src/generator/ecp/: CMakeLists.txt
src/generator/ecp/hswitals_generatore/: CMakeLists.txt  ecp_g_hswitals_generatore.cc  ecp_g_hswitals_generatore.h  ecp_mp_g_hswitals_generatore.h
